--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
 	.search {
 		width: 50%;
 		margin: 0.5em 0;
-		display: block;
+		display: inline-block;
+	}
+
+	.search+input[type="file"] {
+		margin: 0 1em;
+		width: calc(50% - 2em - 16px);
 	}
 
 	.select {
