started writing view components

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	}
 
 	.object {
-		width: 240px;
+		width: 330px;
+		vertical-align: top;
 	}
 
 	.form {
@@ -34,7 +35,7 @@
 		margin: 0;
 	}
 
-	.object h3+input,
+	.object a+input,
 	.form h3+input {
 		float: right;
 	}
@@ -118,6 +119,10 @@
 		stroke-linejoin: round;
 		stroke-linecap: round;
 		pointer-events: none;
+	}
+
+	object {
+		width: 320px;
 	}
 </style>
 
