--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	}
 
 	.object {
-		width: 330px;
+		width: 512px;
 		vertical-align: top;
 	}
 
@@ -119,6 +119,17 @@
 		stroke-linejoin: round;
 		stroke-linecap: round;
 		pointer-events: none;
+	}
+
+	.carosel {
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		overflow-x: scroll;
+	}
+
+	.carosel div+div {
+		margin-left: 1em;
 	}
 
 	object {
