refactoring has begun

--- a/index.html
+++ b/index.html
@@ -4,223 +4,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>underground</title>
+	<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
-
-<style>
-	.mono {
-		font-family: monospace;
-	}
-
-	.object,
-	.form {
-		border: 1px solid #888;
-		border-radius: 1px;
-		display: inline-block;
-		padding: 4px;
-		margin: 4px;
-	}
-
-	.object {
-		width: 512px;
-		vertical-align: top;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-
-	.large.object {
-		display: inline-block;
-		width: max-content;
-		max-width: 1024px;
-	}
-
-	.medium.object {
-		display: inline-block;
-		width: max-content;
-		max-width: 680px;
-	}
-
-	.form {
-		overflow: scroll;
-		min-width: 512px;
-	}
-
-	.object h3,
-	.form h3 {
-		margin: 0;
-	}
-
-	.float {
-		float: right;
-	}
-
-	.object label,
-	.form label {
-		display: block;
-	}
-
-	form .container {
-		display: flex;
-		flex-wrap: wrap;
-		align-items: flex-start;
-	}
-
-	tbody {
-		vertical-align: baseline;
-	}
-
-	/* -------------- */
-
-	.search {
-		width: 50%;
-		margin: 0.5em 0;
-		display: inline-block;
-	}
-
-	.search+input[type="file"] {
-		margin: 0 1em;
-		width: calc(50% - 2em - 6px);
-	}
-
-	.select {
-		height: 256px;
-		overflow: scroll;
-	}
-
-	.select .results {
-		max-width: calc(30% - 1em);
-		display: inline-block;
-		vertical-align: top;
-		height: 100%;
-		overflow: scroll;
-		padding: 0 0.5em;
-	}
-
-	.select .description {
-		width: calc(70% - 1em);
-		display: inline-block;
-		vertical-align: top;
-		height: 100%;
-		overflow: scroll;
-		padding: 0 0.5em;
-	}
-
-	.select .description>h1 {
-		margin: 0;
-	}
-
-	.select .results .result {
-		cursor: pointer
-	}
-
-	.select .results .result .focus {
-		font-weight: bold;
-		text-decoration: underline;
-	}
-
-	.states {
-		fill: #aaa;
-	}
-
-	.state-borders {
-		fill: none;
-		stroke: #eee;
-		stroke-width: 0.5px;
-		stroke-linejoin: round;
-		stroke-linecap: round;
-		pointer-events: none;
-	}
-
-	.carousel {
-		display: flex;
-		flex-direction: row;
-		align-items: flex-start;
-		overflow-x: scroll;
-	}
-
-	.carousel div+div {
-		margin-left: 1em;
-	}
-
-	h4 {
-		padding-top: 1em;
-		margin: 0;
-	}
-
-	h5 {
-		margin: 0;
-	}
-
-	.max-width {
-		width: max-content;
-	}
-
-	object.small {
-		width: 320px;
-		height: 320px;
-	}
-
-	object.medium {
-		width: 640px;
-		height: 480px;
-	}
-
-	header {
-		max-width: 100%;
-		width: max-content;
-	}
-
-	h4.header.max-width+button.float {
-		margin-top: 1.5em;
-	}
-
-	header .header {
-		display: inline-block;
-		max-width: 100%;
-		/* width: max-content; */
-	}
-
-	.carousel-item {
-		margin: 0.5em;
-		padding: 0.5em;
-		border: 1px solid #888;
-		border-radius: 1px;
-	}
-
-	/* header.opened {
-		border: 1px solid #888;
-		padding: 0.5em;
-		margin: 0.5em;
-		width: max-content;
-	} */
-
-	.image {
-		max-height: 320px;
-		max-width: 320px;
-	}
-
-	.full.image {
-		max-width: 100%;
-		max-height: unset;
-	}
-
-	.medium.image {
-		max-height: 640px;
-		max-width: 640px;
-	}
-
-	.table,
-	.table th,
-	.table td {
-		border: 1px solid #888;
-		width: max-content;
-	}
-
-	.mono a {
-		overflow-wrap: break-word;
-	}
-</style>
 
 <body>
 	<main></main>
