added assertion log viewer

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <body>
 	<main></main>
-	<div class="loader">Loading...</div>
+	<!-- <div class="loader">Loading...</div> -->
 	<script src="./dist/bundle.js"></script>
 </body>
 
