--- a/index.html
+++ b/index.html
@@ -1,83 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8" />
+		<title>underlay playground</title>
+		<link rel="icon" type="image/png" href="icon.png" />
+		<link href="styles.css" rel="stylesheet" type="text/css" />
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>underground</title>
-	<link href="styles.css" rel="stylesheet" type="text/css">
-</head>
-<style>
-	.loader,
-	.loader:before,
-	.loader:after {
-		background: #000000;
-		-webkit-animation: load1 1s infinite ease-in-out;
-		animation: load1 1s infinite ease-in-out;
-		width: 1em;
-		height: 4em;
-	}
-
-	.loader {
-		color: #000000;
-		text-indent: -9999em;
-		margin: 88px auto;
-		position: relative;
-		font-size: 11px;
-		-webkit-transform: translateZ(0);
-		-ms-transform: translateZ(0);
-		transform: translateZ(0);
-		-webkit-animation-delay: -0.16s;
-		animation-delay: -0.16s;
-	}
-
-	.loader:before,
-	.loader:after {
-		position: absolute;
-		top: 0;
-		content: '';
-	}
-
-	.loader:before {
-		left: -1.5em;
-		-webkit-animation-delay: -0.32s;
-		animation-delay: -0.32s;
-	}
-
-	.loader:after {
-		left: 1.5em;
-	}
-
-	@-webkit-keyframes load1 {
-		0%,
-		80%,
-		100% {
-			box-shadow: 0 0;
-			height: 4em;
-		}
-		40% {
-			box-shadow: 0 -2em;
-			height: 5em;
-		}
-	}
-
-	@keyframes load1 {
-		0%,
-		80%,
-		100% {
-			box-shadow: 0 0;
-			height: 4em;
-		}
-		40% {
-			box-shadow: 0 -2em;
-			height: 5em;
-		}
-	}
-</style>
-
-<body>
-	<main></main>
-	<!-- <div class="loader">Loading...</div> -->
-	<script src="./dist/bundle.js"></script>
-</body>
-
+	<body>
+		<main></main>
+		<script src="./dist/bundle.js"></script>
+	</body>
 </html>
